# loom

./: .gitignore  Cargo.toml  README.md  hyphen.py
benches/: bench_parser.rs  symbols.rs
data/: en.hyphenation  en.map  layout.js  preamble.yarn  test.html
demo/: layout.css
doc/: counters.yarn  editor.yarn  examples.yarn  language.yarn  layout.yarn  limits.md  mathematics.yarn  meta.structure  model.yarn  output.yarn  payment.md  pipeline.yarn  reference.html  reference.js  reference.yarn  reference.yarn.html  syntax.yarn  typography.yarn  ui.yarn
docs/: editor.css  editor.html  layout.css  layout.js  reference.html  reference.js
src/: blocks.rs  book.rs  commands.rs  config.rs  document.rs  environment.rs  hyphenation.rs  io.rs  layout.rs  lib.rs  number.rs  parser.rs  py.rs  render.rs  renderer.rs  server.rs  slug.rs  source.rs  typeset.rs  units.rs
src/layout/: columns.rs  flex.rs  generator.rs  generic_writer.rs  glue.rs  mod.rs  paragraph.rs  state.rs  style.rs
src/math/: parser.rs
src/nodes/: aside.rs  block.rs  definition.rs  group.rs  leaf.rs  list.rs  mod.rs  module.rs  token.rs
src/output/: html.rs  mod.rs  pdf.rs  png.rs  raster.rs  vector.rs
src/output/html/: mod.rs
src/output/png/: mod.rs
src/platform/: default.rs  mod.rs
src/plugins/: mod.rs  plot.rs
tests/: bench_parser.rs  io_parse.rs
