[package]
name = "loom"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[features]
default = ["output_png", "output_html"]
output_png = ["image", "rusttype"]
output_pdf = ["pdf"]
output_html = ["sxd-document"]
# target has mmap
mmap = ["fst/mmap"]

[dependencies]
unicode_categories = "*"
unicode-brackets = "*"
roman = "*"
rmp = "*"
rmp-serialize = "*"
rustc-serialize = "*"
#lz4 = "*"
#broadcast = "*"
#mio = "*"
#derivative = "*"
itertools = "*"
#futures = "*"
inlinable_string = "*"
ordermap = { git="https://github.com/bluss/ordermap" }
num = "*"
futures = "*"
owning_ref = "*"


[dependencies.fst]
version = "*"
default_features = false

[dependencies.rusttype]
version = "*"
optional = true

[dependencies.pdf]
version = "*"
optional = true

[dependencies.image]
default-features = false
features = ["png_codec"]
version = "0.10.3"
optional = true

[dependencies.nom]
git = "https://github.com/Geal/nom.git"
default_features = false
features = []
#version = "0.4"

[dependencies.woot]
git = "https://github.com/s3bk/woot.git"
#path = "../woot"

[dependencies.sxd-document]
version = "*"
optional = true

[dependencies.yaio]
path = "../YaIo"

[[bin]]
name = "profile_parser"


[profile.release]
opt-level = 3
