[package]
name = "loom"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[features]
default = ["output_png", "output_html"]
output_png = ["image", "rusttype"]
output_pdf = ["pdf"]
output_html = ["sxd-document"]
# target has mmap
mmap = ["fst/mmap"]

[dependencies]
unicode_categories = "*"
unicode-brackets = "*"
roman = "*"
rmp = "*"
rmp-serialize = "*"
#lz4 = "*"
#broadcast = "*"
#mio = "*"
#derivative = "*"
itertools = "*"
#futures = "*"
inlinable_string = "*"
ordermap = "*"
num = "*"
futures = "*"
owning_ref = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
jenga = "*"
marksman_escape = "*"


[dependencies.fst]
version = "*"
default_features = false

[dependencies.rusttype]
version = "*"
optional = true

[dependencies.pdf]
version = "*"
optional = true

[dependencies.image]
default-features = false
features = ["png_codec"]
version = "*"
optional = true

[dependencies.nom]
git = "https://github.com/s3bk/nom.git"
default_features = false
features = []
#version = "0.4"

[dependencies.woot]
git = "https://github.com/s3bk/woot.git"
#path = "../woot"

[dependencies.sxd-document]
version = "*"
optional = true

[dependencies.wheel]
path = "../wheel"

[[bin]]
name = "profile_parser"


[profile.release]
opt-level = 3
