[package]
name = "loom"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[features]
default = ["output_png", "output_html"]
output_png = ["image", "rusttype"]
output_pdf = ["pdf"]
output_html = ["sxd-document"]
# target has mmap
mmap = ["fst/mmap"]

[dependencies]
unicode_categories = "*"
unicode-brackets = "*"
roman = "*"
rmp = "*"
rmp-serialize = "*"
itertools = "*"
istring = { path = "../istring" }
ordermap = "*"
num = "*"
futures = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
marksman_escape = "*"

[dependencies.fst]
version = "*"
default_features = false

[dependencies.rusttype]
version = "*"
optional = true

[dependencies.pdf]
version = "*"
optional = true

[dependencies.image]
default-features = false
features = ["png_codec"]
version = "*"
optional = true

[dependencies.nom]
git = "https://github.com/s3bk/nom.git"
default_features = false
features = []
#version = "0.4"

[dependencies.woot]
git = "https://github.com/s3bk/woot.git"
#path = "../woot"

[dependencies.sxd-document]
version = "*"
optional = true

[dependencies.wheel]
path = "../wheel"

[[bin]]
name = "profile_parser"

[[bin]]
name = "render_html"

[[bin]]
name = "render_png"

[profile.release]
opt-level = 3
